<resources>
    <string name="app_name">Slappiej</string>
    <string name="email">E-Mail</string>
    <string name="transport">Vervoer</string>
    <string name="chat">Tekstberichten</string>
    <string name="video">Beeldberichten</string>
    <string name="news">Nieuws</string>
    <string name="music">Muziek</string>

    <string name="email.inbox">Gekregen E-mails Bekijken</string>
    <string name="email.new">Nieuwe E-mail Schrijven</string>
    <string name="email.bin">Verwijderde E-mails Bekijken</string>
    <string name="email.sent">Verzonden E-mails Bekijken</string>
    <string name="email.title">Afzender: Onderwerp</string>
    <string name="email.recipients">Naar:</string>
    <string name="email.subject">Onderwerp:</string>
    <string name="email.sendButton">Verstuur Email</string>

    <string name="contacts.buttontext">Contacten Kiezen</string>



</resources>
