<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".email.EmailMain"
    android:orientation="horizontal"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/buttonToEmail"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_red_light"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:text="@string/email"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoEmail"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_green_dark"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:text="@string/video"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoVideo"
            android:textAllCaps="false"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_light"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/ic_menu_directions"
            android:text="@string/transport"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoTransport"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_purple"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/btn_star_big_on"
            android:text="@string/news"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoNews"
            android:textAllCaps="false"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_blue_light"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/ic_menu_sort_alphabetically"
            android:text="@string/chat"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoChat"
            android:textAllCaps="false"
            />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@android:color/holo_orange_dark"
            android:padding="3dp"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:text="@string/music"
            android:textSize="60sp"
            android:layout_weight="1"
            android:onClick="gotoMusic"
            android:textAllCaps="false"
            />

    </LinearLayout>


</LinearLayout>
